--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Eventify — Home</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
   <header class="site-header">
@@ -32,7 +32,7 @@
           <a href="contact.html" class="cta">Plan Your Event</a>
         </div>
         <div class="hero-image">
-          <img src="images/hero.jpg" alt="Decorated event hall" />
+          <img src="./images/hero.jpg" alt="Decorated event hall" />
         </div>
       </div>
     </section>
@@ -41,17 +41,17 @@
       <h2>Featured Events</h2>
       <div class="grid cards">
         <article class="card">
-          <img src="images/wedding.jpg" alt="Wedding decor">
+          <img src="./images/wedding.jpg" alt="Wedding decor">
           <h3>Dream Weddings</h3>
           <p>Elegant ceremonies and receptions tailored to your vision.</p>
         </article>
         <article class="card">
-          <img src="images/corporate.jpg" alt="Corporate event">
+          <img src="./images/corporate.jpg" alt="Corporate event">
           <h3>Corporate Events</h3>
           <p>Professional conferences, galas, and product launches.</p>
         </article>
         <article class="card">
-          <img src="images/birthday.jpg" alt="Birthday celebration">
+          <img src="./images/birthday.jpg" alt="Birthday celebration">
           <h3>Birthday Parties</h3>
           <p>Joyful and memorable parties for all ages.</p>
         </article>
@@ -64,6 +64,6 @@
       <p>&copy; <span id="year"></span> Eventify. All rights reserved.</p>
     </div>
   </footer>
-  <script src="js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
