--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Eventify — About</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
   <header class="site-header">
@@ -33,12 +33,12 @@
       <h2>Our Team</h2>
       <div class="grid cards">
         <div class="card">
-          <img src="images/team1.jpg" alt="Team member">
+          <img src="./images/team1.jpg" alt="Team member">
           <h3>Jane Doe</h3>
           <p>Lead Planner</p>
         </div>
         <div class="card">
-          <img src="images/team2.jpg" alt="Team member">
+          <img src="./images/team2.jpg" alt="Team member">
           <h3>John Smith</h3>
           <p>Creative Director</p>
         </div>
@@ -57,6 +57,6 @@
       <p>&copy; <span id="year2"></span> Eventify.</p>
     </div>
   </footer>
-  <script src="js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
